<resources>
    <string name="app_name">Ballet</string>

    <!-- Navigation Bar Titles -->
    <string name="navigation_title_wallet">Wallet</string>
    <string name="navigation_title_send">Send</string>
    <string name="navigation_title_receive">Receive</string>
    <string name="navigation_title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance_eth_template">$BALANCE$ ETH</string>
    <string name="balance_eth_default">0 ETH</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history_transactions">History (Transactions)</string>
    <string name="from_to"><![CDATA[From -> To]]></string>
    <string name="value">Value</string>
    <string name="when">When</string>
    <string name="erc20_tokens">ERC20 TOKENS</string>
    <string name="sender_receiver"><![CDATA[$SENDER$ -> $RECEIVER$]]></string>
    <string name="select_your_favorite_new_account">Select your favorite new Account!</string>
    <string name="reload">RELOAD</string>
    <string name="create">Create</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go">Go</string>
    <string name="loading_">Loading &#8230;</string>
    <string name="hashing_pw_in_progress">Hashing your password for your own security</string>
    <string name="set_password">Set Password</string>
    <string name="wrong_pw_snackbar">Wrong password</string>
    <string name="pws_not_matching_snackbar">Passwords do not match</string>
    <string name="create_wallet_warn_no_wallet_selected">Please select a Wallet to continue.</string>
    <string name="create_wallet_warn_no_name_entered">Please enter an name for your wallet.</string>
    <string name="checking_password">Checking password</string>
    <string name="saving_wallet">Saving Wallet</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="copied_address">Copied the address to the clipboard!</string>
    <string name="self">self</string>
    <string name="send">send</string>
    <string name="send_from">FROM</string>
    <string name="send_select_account">select account</string>
    <string name="send_receiver_address">Receiver Address</string>
    <string name="send_amount">Amount</string>
    <string name="send_gas_limit">Gas Limit</string>
    <string name="unit_ETH"> ETH</string>
    <string name="send_fee">Fee</string>
    <string name="send_gas_price_fmt">$SPEED$, $WAIT$ - $PRICE$</string>
    <string name="send_gas_price_fmt_nomainnet">$SPEED$, $PRICE$</string>
    <string name="send_low_speed">Low</string>
    <string name="send_average_speed">Average</string>
    <string name="send_fast_speed">Fast</string>
    <string name="send_fastest_speed">Fastest</string>
    <string name="select_your_account">Select Your Account</string>
    <string name="unit_seconds">sec</string>
    <string name="unit_minutes">min</string>
    <string name="unit_hours">h</string>
    <string name="about_to_send">Yo are about to send...</string>
    <string name="cancel">cancel</string>
    <string name="send_invalid_receiver_addr">Invalid receiver address</string>
    <string name="send_invalid_gas_limit">Invalid gas limit</string>
    <string name="send_invalid_amount">Invalid amount</string>
    <string name="send_no_src_wallet">Please select an account to send from</string>
    <string name="send_confirm_to_address_addr">To Address: $ADDR$</string>
    <string name="send_confirm_from_address_addr">From Address: $ADDR$</string>
    <string name="send_confirm_amount_to_send_amount">Amount to Send: $AMOUNT$</string>
    <string name="receive_account">ACCOUNT</string>
    <string name="send_confirm_sender_balance">Account Balance: $BALANCE$</string>
    <string name="send_confirm_coin_coin">Coin: $COIN$</string>
    <string name="send_confirm_network_network">Network: $NETWORK$</string>
    <string name="send_confirm_gas_limit_gaslimit">Gas Limit: $GASLIMIT$</string>
    <string name="send_confirm_gas_price_gasprice">Gas Price: $GASPRICE$</string>
    <string name="send_confirm_max_tx_fee_fee">Max TX Fee: $FEE$</string>
    <string name="send_confirm_nonce_nonce">Nonce: $NONCE$</string>
    <string name="unit_gwei"> gwei</string>
    <string name="send_confirm_decrypting_wallet">Decrypting walletfile for signing...</string>
    <string name="send_confirm_send_signed_transaction">Sending signed transaction to node...</string>
    <!-- Section End -->

    <!-- Settings strings -->
    <string name="settings_general_title">General</string>
    <string name="settings_select_network_title">Select Network</string>
    <string name="settings_tracked_tokens_title">Tracked ERC20 Tokens</string>

    <string name="settings_account_title">Account</string>
    <string name="settings_change_password_title">Change Password</string>

    <string name="settings_about_title">About</string>
    <string name="settings_terms_and_conditions_title">Terms and Conditions</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_open_source_libraries_title">Open Source Libraries</string>

    <string name="settings_more_title">More</string>
    <string name="settings_donate_title">Donate ⚗️</string>
    <string name="send_failure">Send failed.</string>
    <string name="send_success">Send succeeded.</string>

    <string name="settings_dialog_button_ok">OK</string>
    <!-- End Settings strings -->

    <!-- Token tracker strings -->
    <string name="settings_token_track_new">Track new ERC20 Token</string>
    <string name="settings_token_erc20_address">ERC20 contract address</string>
    <string name="settings_token_button_test">TEST</string>
    <string name="settings_token_erc20_name">ERC20 contract name</string>
    <string name="settings_token_button_save">SAVE</string>

    <string name="settings_token_total_supply">Total supply: %1$s</string>
    <!-- End Token tracker strings -->

    <!-- Change password strings -->
    <string name="settings_password_current">Current Password</string>
    <string name="settings_password_new">New Password</string>
    <string name="settings_password_new_confirm">Confirm New Password</string>

    <string name="settings_password_button_save">SAVE</string>

    <string name="settings_password_progress_message">Changing your password</string>

    <string name="insecure_pw_error">At least 8 characters</string>

    <string name="settings_password_success_dialog_title">Success</string>
    <string name="settings_password_success_dialog_message">Your password was changed.</string>

    <string name="settings_password_error_dialog_title">Error</string>
    <string name="settings_password_error_dialog_message">Something went wrong. Your new password was not saved. Please try again later.</string>
    <!-- End Change password strings -->

    <!-- Open Source Libraries strings -->
    <string name="settings_open_source_progress_message">Fetching newest version from server</string>

    <string name="settings_open_source_error_title">Error</string>
    <string name="settings_open_source_error_message">Could not fetch data from server. Please try again later.</string>
    <!-- End Open Source Libraries strings -->
</resources>
