<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/navigation_title_wallet" />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_call_made_black_24dp"
        android:title="@string/navigation_title_send" />

    <item
        android:id="@+id/navigation_receive"
        android:icon="@drawable/ic_call_received_black_24dp"
        android:title="@string/navigation_title_receive" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navigation_title_settings" />
</menu>
